--- a/src/Tippy/Pages/Transactions/Details.cshtml
+++ b/src/Tippy/Pages/Transactions/Details.cshtml
@@ -108,7 +108,7 @@
                     </div>
 
                     <div class="column is-2">
-                        Tx
+                        Generated Tx
                     </div>
                     <div class="column is-10">
                         <a asp-page="/Transactions/Details" asp-route-txhash="@input.GeneratedTxHash" class="hash-text">
