--- a/src/Tippy/Pages/Transactions/Details.cshtml
+++ b/src/Tippy/Pages/Transactions/Details.cshtml
@@ -135,10 +135,15 @@
                 <div class="column is-2">
                     Address
                 </div>
-                <div class="column is-10">
+                <div class="column is-8">
                     <a asp-page="/Addresses/Details" asp-route-address="@output.AddressHash" class="hash-text">
                         @output.AddressHash
                     </a>
+                </div>
+                <div class="column is-2">
+                    <form method="post">
+                        <button asp-page="./MarkSudt" asp-route-txhash="@Model.TransactionDetail.TransactionHash" asp-route-index="@index" class="button is-pulled-right">Mark as sUDT Script</button>
+                    </form>
                 </div>
 
                 <div class="column is-2">
