Implement sUDT token list and details page

--- a/src/Tippy/Pages/Shared/_Layout.cshtml
+++ b/src/Tippy/Pages/Shared/_Layout.cshtml
@@ -202,6 +202,12 @@
                                 </a>
                             </li>
                             <li>
+                                <a asp-page="/Tokens/Index">
+                                    <span class="icon is-small"><i class="fas fa-dollar-sign"></i></span>
+                                    <span class="menu-text">Tokens</span>
+                                </a>
+                            </li>
+                            <li>
                                 <a asp-page="/NodeLog/Index">
                                     <span class="icon is-small"><i class="far fa-file-alt"></i></span>
                                     <span class="menu-text">Logs</span>
