Format ckb capacity and token amount

--- a/src/Tippy/Pages/Addresses/Details.cshtml
+++ b/src/Tippy/Pages/Addresses/Details.cshtml
@@ -12,7 +12,7 @@
 </div>
 
 @{
-    var balance = Tippy.Helpers.TransactionHelper.CkbAmount(Model.AddressResult.Balance);
+    var balance = Tippy.Helpers.NumberHelper.CkbAmount(Model.AddressResult.Balance);
 }
 
 <div class="box address-box">
