--- a/src/Tippy/Pages/Blocks/Index.cshtml
+++ b/src/Tippy/Pages/Blocks/Index.cshtml
@@ -42,7 +42,7 @@
                         }
                         else
                         {
-                            var reward = Tippy.Helpers.TransactionHelper.CkbAmount(block.Reward);
+                            var reward = Tippy.Helpers.NumberHelper.CkbAmount(block.Reward);
                             <span>@reward</span>
                         }
                     </td>
