--- a/src/Tippy/Pages/Transactions/Index.cshtml
+++ b/src/Tippy/Pages/Transactions/Index.cshtml
@@ -39,7 +39,7 @@
                     </td>
                     <td>
                         @{
-                            var capacity = Tippy.Helpers.TransactionHelper.CkbAmount(tx.CapacityInvolved);
+                            var capacity = Tippy.Helpers.NumberHelper.CkbAmount(tx.CapacityInvolved);
                         }
                         <span>@capacity</span>
                     </td>
