--- a/src/Tippy/Pages/Transactions/Details.cshtml
+++ b/src/Tippy/Pages/Transactions/Details.cshtml
@@ -35,7 +35,8 @@
             <label>Transaction Fee</label>
         </div>
         <div class="column is-10">
-            @Model.TransactionDetail.TransactionFee
+            @Tippy.Helpers.NumberHelper.CkbAmount(Model.TransactionDetail.TransactionFee)
+            CKB
         </div>
 
         <div class="column is-2">
@@ -116,13 +117,13 @@
                         @if (input.SudtInfo != null)
                         {
                             <span>
-                                @Tippy.Helpers.TransactionHelper.SudtAmount(input.SudtInfo.Amount)
+                                @Tippy.Helpers.NumberHelper.Amount(input.SudtInfo.Amount)
                                 <a asp-page="/Tokens/Details" asp-route-id="@input.SudtInfo.Id">@input.SudtInfo.Name</a>
                             </span>
                         }
                         else
                         {
-                            <span>@Tippy.Helpers.TransactionHelper.CkbAmount(input.Capacity) CKB</span>
+                            <span>@Tippy.Helpers.NumberHelper.CkbAmount(input.Capacity) CKB</span>
                         }
                     </div>
 
@@ -130,7 +131,7 @@
                         Occupied CKB
                     </div>
                     <div class="column is-10">
-                        <span>@Tippy.Helpers.TransactionHelper.CkbAmount(input.OccupiedCapacity ?? "0")</span>
+                        <span>@Tippy.Helpers.NumberHelper.CkbAmount(input.OccupiedCapacity ?? "0")</span>
                     </div>
                 </div>
             }
@@ -170,13 +171,13 @@
                     @if (output.SudtInfo != null)
                     {
                         <span>
-                            @Tippy.Helpers.TransactionHelper.SudtAmount(output.SudtInfo.Amount)
+                            @Tippy.Helpers.NumberHelper.Amount(output.SudtInfo.Amount)
                             <a asp-page="/Tokens/Details" asp-route-id="@output.SudtInfo.Id">@output.SudtInfo.Name</a>
                         </span>
                     }
                     else
                     {
-                        <span>@Tippy.Helpers.TransactionHelper.CkbAmount(output.Capacity) CKB</span>
+                        <span>@Tippy.Helpers.NumberHelper.CkbAmount(output.Capacity) CKB</span>
                     }
                 </div>
 
@@ -184,7 +185,7 @@
                     Occupied CKB
                 </div>
                 <div class="column is-10">
-                    <span>@Tippy.Helpers.TransactionHelper.CkbAmount(output.OccupiedCapacity ?? "0")</span>
+                    <span>@Tippy.Helpers.NumberHelper.CkbAmount(output.OccupiedCapacity ?? "0")</span>
                 </div>
 
                 <div class="column is-2">
