Add db migration support; add decimals column to tokens table

--- a/src/Tippy/Pages/Tokens/Details.cshtml
+++ b/src/Tippy/Pages/Tokens/Details.cshtml
@@ -21,6 +21,13 @@
         </div>
 
         <div class="column is-2">
+            <label>Decimals</label>
+        </div>
+        <div class="column is-10">
+            <span>@Model.Token.Decimals</span>
+        </div>
+
+        <div class="column is-2">
             <label>Type Script</label>
         </div>
         <div class="column is-10">
