--- a/src/Tippy/Pages/Tokens/Details.cshtml
+++ b/src/Tippy/Pages/Tokens/Details.cshtml
@@ -4,6 +4,15 @@
 
 <h1 class="title">sUDT Token</h1>
 
+<div class="my-2">
+    <a asp-page="./Delete" asp-route-id="@Model.Token.Id" class="button is-danger" title="Delete token">
+        <span class="icon">
+            <i class="fas fa-trash"></i>
+        </span>
+        <span>Delete token</span>
+    </a>
+</div>
+
 <div class="box transaction-box">
     <div class="columns is-multiline">
         <div class="column is-2">
