Add close debugger button

--- a/src/Tippy/Pages/Debugger/Details.cshtml
+++ b/src/Tippy/Pages/Debugger/Details.cshtml
@@ -15,6 +15,12 @@
 </div>
 
 <div>
+    <form asp-page-handler="close" method="post">
+        <button>Button</button>
+    </form>
+</div>
+
+<div>
   <iframe width="640" height="640" src="http://localhost:7681"></iframe>
 </div>
 
